[gd_scene load_steps=4 format=2]

[ext_resource path="res://Core/Characters/Character.tscn" type="PackedScene" id=1]
[ext_resource path="res://Core/Familiar/FamiliarBot.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 133.034

[node name="Familiar" type="Node2D"]
script = ExtResource( 2 )

[node name="CharacterBody" parent="." instance=ExtResource( 1 )]

[node name="AnimatedSprite" parent="CharacterBody" index="1"]
modulate = Color( 0.12549, 1, 0, 1 )

[node name="OverlapSphere" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="OverlapSphere"]
shape = SubResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="InteractIcon" type="Label" parent="."]
visible = false
anchor_right = 0.012
margin_left = -26.145
margin_top = -60.0
margin_right = 18.855
margin_bottom = -46.0
text = "[space]"
align = 1

[connection signal="on_character_collision" from="CharacterBody" to="." method="_on_CharacterBody_on_character_collision"]
[connection signal="death" from="CharacterBody/Health" to="." method="_on_Health_death"]
[connection signal="body_entered" from="OverlapSphere" to="." method="_on_OverlapSphere_body_entered"]
[connection signal="body_exited" from="OverlapSphere" to="." method="_on_OverlapSphere_body_exited"]

[editable path="CharacterBody"]
